# colav-controllers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: collision_avoidance_demo.ipynb  prescribed_time_demo.ipynb
src/colav_controllers/: __init__.py  collision_avoidance.py  prescribed_time.py
src/colav_controllers/utils/: __init__.py  geometry.py  helpers.py  virtual_waypoint.py
